# python-geospatial-project

./: OLS_INTEGRATION_GUIDE.md  README.md  convert_horizontal_surface.py  convert_takeoff_conical.py  pyproject.toml  requirements.txt  serve_ols_viewer.py  start_server.bat
data/processed/: conical.geojson  conical_3d.geojson  horizontal.geojson  obstacles.json  takeoff.geojson
data/raw/conique/: conique_3D.dbf  conique_3D.sbn  conique_3D.sbx  conique_3D.shp  conique_3D.shp.xml  conique_3D.shx
data/raw/horizental/: horizental.dbf  horizental.sbn  horizental.sbx  horizental.shp  horizental.shp.xml  horizental.shx
data/raw/montee/: montee.dbf  montee.sbn  montee.sbx  montee.shp  montee.shp.xml  montee.shx
data/raw/surface_approche_geojson/: surface_loader.js  surfaceapproche.geojson
examples/: 01_basic_loading.py  02_interactive_maps.py  03_spatial_analysis.py  04_raster_processing.py  05_3d_ols_viewer.py  ols_3d_cesium_professional.html
src/: __init__.py
src/analysis/: __init__.py
src/data_processing/: __init__.py
src/utils/: __init__.py
src/visualization/: __init__.py
surface_approche_geojson/: horizontal.geojson
