# Configuration file for the Python Geospatial Project

[project]
name = "python-geospatial-project"
version = "1.0.0"
description = "A comprehensive Python geospatial analysis project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[project.dependencies]
# Core dependencies (install as needed)
# geopandas = ">=0.14.0"
# shapely = ">=2.0.0"
# fiona = ">=1.9.0"
# rasterio = ">=1.3.0"
# pyproj = ">=3.6.0"

[project.optional-dependencies]
visualization = [
    # "folium>=0.14.0",
    # "plotly>=5.15.0",
    # "matplotlib>=3.7.0",
    # "contextily>=1.4.0",
    # "cartopy>=0.22.0"
]
analysis = [
    # "numpy>=1.24.0",
    # "scipy>=1.11.0", 
    # "pandas>=2.0.0",
    # "scikit-learn>=1.3.0"
]
development = [
    "jupyter>=1.0.0",
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
